Updated code with proper comments